tox: Use a new mypy feature to run all checks in a single cmd line

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,8 @@ envlist=
     py{35,36}-native-state-{frontier,homestead,eip150,eip158,byzantium,constantinople,metropolis}
     flake8py35
     flake8py36
-    mypy
+    mypy35
+    mypy36
 
 [flake8]
 max-line-length= 100
@@ -80,5 +81,4 @@ basepython=python3.6
 setenv=MYPYPATH={toxinidir}:{toxinidir}/stubs
 # TODO: Drop --ignore-missing-imports once we have type annotations for eth_utils, coincurve and cytoolz
 commands=
-    mypy --follow-imports=silent --ignore-missing-imports --check-untyped-defs --disallow-incomplete-defs -p p2p
-    mypy --follow-imports=silent --ignore-missing-imports --check-untyped-defs --disallow-incomplete-defs -p trinity
+    mypy --follow-imports=silent --ignore-missing-imports --check-untyped-defs --disallow-incomplete-defs -p p2p -p trinity
